# task-manager

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  build.sh  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: task-manager.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
staticfiles/: staticfiles.json
task_manager/: custom_utils.py  forms.py  mixins.py  settings.py  tests.py  urls.py  views.py
task_manager/api/: urls.py
task_manager/api/users/: serializers.py  tests.py  urls.py  views.py
task_manager/fixtures/: auth.json  labels.json  labels_to_create.json  serialized_users.json  statuses.json  statuses_to_create.json  tasks.json  tasks_to_create.json  test_tasks.json  user.json  users.json  users_to_create.json
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_description.py  0002_initial.py  0003_rename_assignee_task_executor.py  0003_task_label.py  0003_task_labels.py  0004_remove_task_label_tasklabel_task_labels.py
task_manager/templates/: 404.html  500.html  footer.html  header.html  index.html  layout.html  login.html
task_manager/templates/components/: delete.html  navbar_logged_in.html  navbar_logged_out.html
task_manager/templates/labels/: create.html  delete.html  labels.html  statuses.html  update.html
task_manager/templates/statuses/: create.html  statuses.html  update.html
task_manager/templates/tasks/: create.html  (+4 more)
task_manager/users/: admin.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
(+8 files in other folders)
